[B]1.3.5[/B]
- Reenabled tilting icons in List and Wall views, setting now accessable from "View-as" menu.
- New home menu type "Icon".  User can now select from three home menu types
  (Gen1 ,2 or 3 AppleTV home menu types).
- Removed all remaining redundant strings.
- Moved a number of common code blocks to the includes file to ease maintainabilty
  and to slightly reduce memory footprint.
- Major code cleanup in prepartion for Gotham version of the skin.
- Rewrite File stacking dialog.  Code was broken for a long time without anyone noticing,
  thanks Ronnie (Transparency!) for borrowed code.
- Improved navigation and clean up of screen layout for music info screens.
- Navigation improved in a number of other screens and dialogs.
- New languages added, Canadian French and Swedish.
- Number of minor bug fixes.

[B]1.3.4[/B]
- Recoded Horizontal home menu to fix issue with losing focus.
- Allow user to select type of shelf icon(s) in horizontal home menu.
- Reworked horizontal home shelf icons to match our fruity friends a little more closely.
- Added support for Lyrics script.
- Added 4K flag image to support flagging of 4K videos.
- Added support for changing 3D mode in video OSD.
- Added support for weather provider icons.
- Added support for Next Aired TV Show script.
- Added support for MCE pvr dialogs.
- Added support for v4.0.0 of TV Tunes script, now plays theme in video info screen and plays movie themes.
- Added support to horizontal home menu screen for a custom watermark image in the lower right corner of screen.
- Reworked custom video info extras dialog, all extra options have been moved to this dialog and
  strings updated to better describe each options action.
- Improvements to navigation between controls in a number of dialogs
- Four new languages, including Chinese, Dutch, Hungarian and Malay
- A number of image files have been updated and optimised.
- Numerous bugfixes and code optimisations.

[B]1.3.3[/B]
- Major refactor of Video OSD.