@@ -117,18 +117,18 @@
 			</control>
 			<control type="image">
 				<posx>1222</posx>
-				<posy>396</posy>
-				<width>32</width>
-				<height>32</height>
+				<posy>394</posy>
+				<width>30</width>
+				<height>30</height>
 				<texture>scroll-right.png</texture>
 				<aspectratio>keep</aspectratio>
 				<visible>!Control.HasFocus(987)</visible>
 			</control>
 			<control type="image">
 				<posx>1222</posx>
-				<posy>396</posy>
-				<width>32</width>
-				<height>32</height>
+				<posy>394</posy>
+				<width>30</width>
+				<height>30</height>
 				<texture>scroll-right-focus.png</texture>
 				<aspectratio>keep</aspectratio>
 				<visible>Control.HasFocus(987)</visible>
